minor memory optimizations