@@ -1,16 +1,14 @@
 -client
 -Xms20m
 -Xmx40m
--XX:+UnlockExperimentalVMOptions
--XX:+TieredCompilation
 -XX:+AggressiveOpts
--XX:+UseAdaptiveSizePolicy
 -Dsun.java2d.noddraw=true
 -Dswing.aatext=true
 -Dcom.apple.macos.useScreenMenuBar=true
 -Dcom.apple.mrj.application.apple.menu.about.name=Musique
 -Dcom.apple.macos.smallTabs=true
--XX:MaxPermSize=20m
--XX:NewRatio=5
--XX:SurvivorRatio=4
+-XX:NewRatio=3
+-XX:SurvivorRatio=3
 -XX:+UseAdaptiveGCBoundary
+-XX:MaxTenuringThreshold=5
+-XX:TargetSurvivorRatio=90
